--- a/style.scss
+++ b/style.scss
@@ -7,7 +7,7 @@ Note: tout élément (par exemple article.carte) sera précédé de
 `section#principale` dans le CSS final.
 */
 section#principale {
-    width: 700px;
+    width: 750px;
     margin: 0 auto;
 
     /* La carte à jouer */
@@ -15,82 +15,93 @@ section#principale {
         display: inline-block;
         height: 100px;
         width: 100px;
+        margin-left: 3px;
+    }
+
+    article.recto {
         background: { // ce bloc est utilisé comme préfixe pour les propriétés
             image: url("cards.png"); // on aura background-image
             repeat: no-repeat; // ici background-repeat
         }
     }
 
+    article.verso {
+        background: {
+            image: none;
+            color: grey;
+        }
+    }
+
     /* On décompose l'image cards.png pour extraire chaque fruit */
-    article#image1 {
+    article.recto1 {
         background-position: 0 0px;
     }
 
-    article#image2 {
+    article.recto2 {
         background-position: 0 -100px;
     }
 
-    article#image3 {
+    article.recto3 {
         background-position: 0 -200px;
     }
 
-    article#image4 {
+    article.recto4 {
         background-position: 0 -300px;
     }
 
-    article#image5 {
+    article.recto5 {
         background-position: 0 -400px;
     }
 
-    article#image6 {
+    article.recto6 {
         background-position: 0 -500px;
     }
 
-    article#image7 {
+    article.recto7 {
         background-position: 0 -600px;
     }
 
-    article#image8 {
+    article.recto8 {
         background-position: 0 -700px;
     }
 
-    article#image9 {
+    article.recto9 {
         background-position: 0 -800px;
     }
 
-    article#image10 {
+    article.recto10 {
         background-position: 0 -900px;
     }
 
-    article#image11 {
+    article.recto11 {
         background-position: 0 -1000px;
     }
 
-    article#image12 {
+    article.recto12 {
         background-position: 0 -1100px;
     }
 
-    article#image13 {
+    article.recto13 {
         background-position: 0 -1200px;
     }
 
-    article#image14 {
+    article.recto14 {
         background-position: 0 -1300px;
     }
 
-    article#image15 {
+    article.recto15 {
         background-position: 0 -1400px;
     }
 
-    article#image16 {
+    article.recto16 {
         background-position: 0 -1500px;
     }
 
-    article#image17 {
+    article.recto17 {
         background-position: 0 -1600px;
     }
 
-    article#image18 {
+    article.recto18 {
         background-position: 0 -1700px;
     }
 
